<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/update_time_interval"
        android:orderInCategory="1"
        android:title="@string/menu_update_time_interval">
        <menu>
            <item
                android:id="@+id/seconds15"
                android:title="@string/menu_15_seconds"/>
            <item
                android:id="@+id/minute1"
                android:title="@string/menu_1_minute"/>
            <item
                android:id="@+id/minutes2"
                android:title="@string/menu_2_minutes"/>
            <item
                android:id="@+id/minutes5"
                android:title="@string/menu_5_minutes"/>
            <item
                android:id="@+id/minutes10"
                android:title="@string/menu_10_minutes"/>
        </menu>
    </item>
    <item
        android:id="@+id/update_travel_distance"
        android:orderInCategory="2"
        android:title="@string/menu_update_travel_distance"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/meter1"
                android:title="@string/menu_1_meter"/>
            <item
                android:id="@+id/meters10"
                android:title="@string/menu_10_meters"/>
            <item
                android:id="@+id/meters50"
                android:title="@string/menu_50_meters"/>
            <item
                android:id="@+id/meters100"
                android:title="@string/menu_100_meters"/>
            <item
                android:id="@+id/meters500"
                android:title="@string/menu_500_meters"/>
        </menu>
    </item>
    <item
        android:id="@+id/remove_all_places"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menu_remove_all_places"/>

</menu>